# koguchi

./: .coverage  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
crates/koguchi-chokepoint/: Cargo.toml
docs/: architecture.md  known-limitations.md  roadmap.md
examples/: dashboard_observation.py  dashboard_static_html_report.py  minimal_tool_proxy.py  persistent_audit_store.py  reconciliation_scheduler.py  rust_chokepoint_spike.py  serviceruntime_chokepoint_backend.py
schemas/: reconciliation-result-record.v0.schema.json
tests/: conftest.py  test_audit_gate.py  test_audit_store.py  test_chokepoint_client.py  test_cli_reconciliation_inspection.py  test_context_resolver.py  test_dashboard.py  test_dashboard_report.py  test_decision_chain.py  test_decision_logger.py  test_envelope_required.py  test_execution_backend.py  test_filesystem_diff_reconciliation.py  test_hash_chain.py  test_i18n.py  test_integration.py  test_joujou_integration.py  test_mkdir.py  test_mkdir_scope.py  test_network_http.py  test_pending_first_phase.py  test_policy_enforcement.py  test_policy_gate.py  test_provider_reconcile.py  test_rde.py  test_reconciliation.py  test_reconciliation_persistence.py  test_reconciliation_result_schema.py  test_reconciliation_scheduler.py  test_reconciliation_store.py  test_redaction.py  test_runtime_boundary.py  test_scheduler_reconciliation.py  test_service_runtime.py  test_shell_execute.py  test_toolproxy_reconciliation.py  test_unconfirmed_second_phase.py  test_verify_chain.py  test_workspace_boundary.py
(+102 files in other folders)
