[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "koguchi"
version = "0.1.0"
description = "Context-Aware Harness — Side-Effect Chokepoint"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/koguchi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
