[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "koguchi"
version = "0.1.0"
description = "Context-Aware Harness — Side-Effect Chokepoint"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff>=0.5.0",
    "mypy>=1.0",
    "jsonschema>=4.0",
    "pdoc>=14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/koguchi"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true
